--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     особенно, для загородных участков.
                   </div>
                 </div>
-                <img src="./img/видбур.png" alt="well" class="wells__img" />
+                <img src="img/видбур.png" alt="well" class="wells__img" />
                 <p class="wells__info-text">
                   Скважина на песок - их принято считать самыми популярными и
                   распространенными видами источников воды, особенно, для
@@ -312,7 +312,7 @@
                     особенно, для загородных участков.
                   </div>
                 </div>
-                <img src="./img/видбур.png" alt="well" class="wells__img" />
+                <img src="img/видбур.png" alt="well" class="wells__img" />
                 <p class="wells__info-text">
                   Скважина на песок - их принято считать самыми популярными и
                   распространенными видами источников воды, особенно, для
@@ -439,7 +439,7 @@
           <div class="pipes__gallery">
             <div class="pipes__gallery-items">
               <div class="pipes__gallery-item">
-                <img class="pipe__img" src="/img/pipes/1.png" alt="" />
+                <img class="pipe__img" src="img/pipes/1.png" alt="" />
                 <div class="img__caption">
                   <h2 class="title__pipes">Металлическая обсадная труба</h2>
                 </div>
@@ -459,7 +459,7 @@
                 </div>
               </div>
               <div class="pipes__gallery-item">
-                <img class="pipe__img" src="/img/pipes/2.png" alt="" />
+                <img class="pipe__img" src="img/pipes/2.png" alt="" />
                 <div class="img__caption">
                   <h2 class="title__pipes">ПНД труба</h2>
                 </div>
@@ -481,7 +481,7 @@
               </div>
 
               <div class="pipes__gallery-item">
-                <img class="pipe__img" src="/img/pipes/3.png" alt="" />
+                <img class="pipe__img" src="img/pipes/3.png" alt="" />
                 <div class="img__caption">
                   <h2 class="title__pipes">НПВХ труба</h2>
                 </div>
